# Sequence_Matching

./: A2ASS6.txt  All_Matches.txt  CMakeLists.txt  FileManipulation.cpp  FileManipulation.h  G4SLH0.txt  Makefile  MatchList.cpp  MatchList.h  MatchLocations.cpp  MatchLocations.h  MatchNode.cpp  MatchNode.h  Matches.txt  Matches_Only.txt  Parallel_Matches.txt  Q8WZ42.txt  Q9I7U4.txt  README.md  Results.txt  SequenceMatching.cpp  SequenceMatching.h  SequenceSimilarity.cpp  SequenceSimilarity.h  Sequence_1.txt  Sequence_2.txt  Sequence_2L.txt  Sequence_Matching  Submatches.txt  Titin_Caenorhabditis.txt  Titin_Human.txt  Titin_Mouse.txt  a.out  ctpl.h  main.cpp  tbb_Matches_SingleThread.txt
